--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "require": {
     "rmccue/requests": ">=1.0",
-    "3rdpartyeve/phealng": "1.0.0"
+    "3rdpartyeve/phealng": "1.0.0",
+    "monolog/monolog": "~1.12.0"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.0",
